refinement: Resolve PMD findings for ATS